--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<script src="7.js"></script>
+	<script src="7filter.js"></script>
 	<script src ="7forEach.js></script>
 </body>
 </html>
