--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,6 @@
 	<title>Document</title>
 </head>
 <body>
-	<script src ="7forEach.js></script>
+	<script src ="7forEach.js"></script>
 </body>
 </html>
